# proto_vs_reflection

./: readme.md  settings.gradle.kts
.github/workflows/: deploy_bt.yml
.run/: Main.run.xml  proto_vs_reflection [run].run.xml
term/: build.gradle.kts
term/src/main/cpp/: CMakeLists.txt  native-lib.cpp  term.cpp
term/src/main/cpp/model/: meta.h  some_cmd.h  some_event.h
term/src/main/java/com/example/: Main.java
term/src/main/java/com/example/engine/: JniEngine.java  JniListener.java
term/src/main/java/com/example/model/: Meta.java  ModelUtils.java  SomeCmd.java  SomeEvent.java
term/src/main/proto/: jni.proto
